# debtor

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  debtor.cabal  default.nix  flake.nix  shell.nix
app/: Main.hs  Persistance.hs  Persistence.hs
