cabal-version:   1.24
name:            debtor
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      taraujonofre@gmail.com
author:          OnofreTZK
category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable debtor
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Persistance
    default-language: Haskell2010
    build-depends:
        base >=4.19 && <4.20,
        directory,
        safe-money
